# space-lion-example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
ExampleProject/: CMakeLists.txt  OpenGLEngineFrontEnd.cpp  OpenGLEngineFrontEnd.hpp  OpenGLEngineFrontend.cpp  OpenGLEngineFrontend.hpp  main.cpp
ExampleProjectUWP/: CMakeLists.txt  DemoScene.cpp  DemoScene.hpp  DeviceResources.h  DirectXEngineFrontendUWP.cpp  DirectXEngineFrontendUWP.hpp  ImPlotOffscreenRenderPass.cpp  ImPlotOffscreenRenderPass.h  imgui_impl_uwp.cpp  imgui_impl_uwp.h  mainuwp.cpp  pch.h  platformUtility.hpp
src/: OpenGLEngineFrontend.cpp  OpenGLEngineFrontend.hpp  main.cpp
